--- a/css/main.css
+++ b/css/main.css
@@ -261,7 +261,7 @@ body > .bg {
 }
 
 #content .bg.parallax {
-  position: fixed;
+  position: absolute;
 }
 
 #content .bg.parallax img {
@@ -560,11 +560,6 @@ body > .bg {
   #content .bg.extended {
     width: 200%;
     left: -50%;
-  }
-
-  #content > .page:nth-child(1) > .bg {
-    width: 100%;
-    left: 0%;
   }
 }
 
